--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs_simplest_test",
+  "name": "simplest-test",
   "version": "1.0.0",
   "description": "As bare-bones as possible testing framework aimed at doing nothing more than acting as a non-breaking assert.",
   "main": "index.js",
