--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplest-test",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "As bare-bones as possible testing framework aimed at doing nothing more than acting as a non-breaking assert.",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Ameobea/nodejs_simplest_test.git"
   },
-  "author": "Casey Primozic <me@ameo.link>",
+  "author": "Casey Primozic <me@ameo.link>, Alex Jensen <Github @dalexj>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ameobea/nodejs_simplest_test/issues"
